home page - add index.html - add NicttController - add ProductController

--- a/src/main/resources/templates/show_all_orders.html
+++ b/src/main/resources/templates/show_all_orders.html
@@ -40,6 +40,8 @@
         <br/>
     </div>
     <p><a href="/orders/new">  Create NEW order</a></p>
+    <p><a href="/"> to Home </a></p>
+
 </div>
 </body>
 </html>
