--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 <h1> Добро пажаловать на тестовый сайт NICTT</h1>
 <h3>здесь вы можете создавать заказы</h3>
 
-    <p><a style="color:red" href="/orders"> создать новый заказ</a></p>
+    <p><a style="color:green" href="/orders"> посмотреть список заказов</a></p>
 <br>
-    <p><a style="color:red" href="/products"> посмотреть список продуктов</a></p>
+    <p><a style="color:green" href="/products"> посмотреть список продуктов</a></p>
 </div>
 </body>
 </html>
